2007-02-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpstringcombobox.[ch]: added GimpStringComboBox.

	* libgimpwidgets/gimppropwidgets.[ch]: added a prop widget
	constructor that uses the new widget.

	* libgimpwidgets/gimpwidgets.def: updated.

	* app/widgets/gimpcontrollereditor.c: use a GimpStringComboBox if
	the module specifies a tree model with string values.

	* modules/gimpinputdevicestore.c: minor cleanup.

	* modules/controller_linux_input.c: keep a pointer to the input
	device store and unref it in the finalizer.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerlist.c (gimp_controller_list_edit_clicked):
	use a GimpDialog instead of a GimpViewableDialog.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c
	* libgimpwidgets/gimppropwidgets.c: most property widgets rely on
	a writable property. Check for that or make the widget non-editable
	if the G_PARAM_WRITABLE flag is unset.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollereditor.c: minor refactoring.

	* libgimpwidgets/gimppropwidgets.c (gimp_prop_label_new): allow
	this function to be used with properties that are transformable to
	string values, not only with string properties.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_colorblind.c: set translation domain for the
	registered enum type.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* configure.in: lower minimum required version of libhal to 0.5.7.

	* modules/gimpinputdevicestore.c: don't list PC Speaker, even
	though the kernel claims that it would be an input device.

2007-02-11  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.c: don't limit the store to
	"input.mouse", list all input devices.

2007-02-11  Sven Neumann  <sven@gimp.org>

	* configure.in: check for libhal if Linux Input support is enabled.

	* modules/Makefile.am